--- a/index.html
+++ b/index.html
@@ -48,19 +48,15 @@
                             <img class="purchase__link-img" src="images/icons/heart.png" alt="heart icon">
                             <span class="purchase__num">0</span>
                         </a>
-
-                        </a>
                         <a class="purchase__link" href="#">
                             <img class="purchase__link-img" src="images/icons/cart.svg" alt="cart icon">
                             <span class="purchase__num">0</span>
                         </a>
                     </div>
                 </div>
-                <button class="menu__btn">
-                    <a class="user-nav__link user-nav__link-choice" href="#">
-                        <img class="user-nav__link-img" src="images/icons/choice.svg" alt="choice icon">
-                    </a>
-                </button>
+                <a class="user-nav__link user-nav__link-choice" href="#">
+                    <img class="user-nav__link-img" src="images/icons/choice.svg" alt="choice icon">
+                </a>
             </div>
         </div>
     </header>
@@ -90,7 +86,7 @@
                         <p class="top-slider__text">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor incididunt </p>
                         <a class="top-slider__link" href="#">
-                            <span top-slider__link-span>BUY NOW</span>
+                            <span class='top-slider__link-span'>BUY NOW</span>
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                 width="22px" height="9px">
                                 <path fill-rule="evenodd" fill="rgb(255, 255, 255)"
@@ -110,7 +106,7 @@
                         <p class="top-slider__text">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor incididunt </p>
                         <a class="top-slider__link" href="#">
-                            <span top-slider__link-span>BUY NOW</span>
+                            <span class='top-slider__link-span'>BUY NOW</span>
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                 width="22px" height="9px">
                                 <path fill-rule="evenodd" fill="rgb(255, 255, 255)"
@@ -130,7 +126,7 @@
                         <p class="top-slider__text">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor incididunt </p>
                         <a class="top-slider__link" href="#">
-                            <span top-slider__link-span>BUY NOW</span>
+                            <span class='top-slider__link-span'>BUY NOW</span>
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                 width="22px" height="9px">
                                 <path fill-rule="evenodd" fill="rgb(255, 255, 255)"
@@ -277,135 +273,137 @@
                             <h4 class="product-item__title">
                                 White chair
                             </h4>
-                            <span class="product-item__price">$29.00</і>
+                            <span class="product-item__price">$29.00</span>
                         </div>
-                    </div>
 
 
 
-                    <div class="product-item">
-                        <div class="product-item__img-box">
-                            <img src="images/product/4.png" alt="product" class="product-item__images" width="230"
-                                height="140">
-                            <div class="product-item__link-box">
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/search-product.svg" alt="search icon">
-                                </a>
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/cart-product.svg" alt="cart icon">
-                                </a>
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/heart-product.svg" alt="heart icon">
-                                </a>
+
+                        <div class="product-item">
+                            <div class="product-item__img-box">
+                                <img src="images/product/4.png" alt="product" class="product-item__images" width="230"
+                                    height="140">
+                                <div class="product-item__link-box">
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/search-product.svg" alt="search icon">
+                                    </a>
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/cart-product.svg" alt="cart icon">
+                                    </a>
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/heart-product.svg" alt="heart icon">
+                                    </a>
+                                </div>
                             </div>
+                            <h4 class="product-item__title">
+                                Retro table
+                            </h4>
+                            <span class="product-item__price">$29.00</span>
                         </div>
-                        <h4 class="product-item__title">
-                            Retro table
-                        </h4>
-                        <span class="product-item__price">$29.00</span>
-                    </div>
 
 
-                    <div class="product-item">
-                        <div class="product-item__img-box">
-                            <img src="images/product/5.png" alt="product" class="product-item__images" width="235"
-                                height="160">
-                            <div class="product-item__link-box">
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/search-product.svg" alt="search icon">
-                                </a>
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/cart-product.svg" alt="cart icon">
-                                </a>
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/heart-product.svg" alt="heart icon">
-                                </a>
+                        <div class="product-item">
+                            <div class="product-item__img-box">
+                                <img src="images/product/5.png" alt="product" class="product-item__images" width="235"
+                                    height="160">
+                                <div class="product-item__link-box">
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/search-product.svg" alt="search icon">
+                                    </a>
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/cart-product.svg" alt="cart icon">
+                                    </a>
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/heart-product.svg" alt="heart icon">
+                                    </a>
+                                </div>
                             </div>
+                            <h4 class="product-item__title">
+                                Wooden radio
+                            </h4>
+                            <div class="product-item__price">$29.00</div>
                         </div>
-                        <h4 class="product-item__title">
-                            Wooden radio
-                        </h4>
-                        <div class="product-item__price">$29.00</div>
-                    </div>
 
 
 
-                    <div class="product-item">
-                        <div class="product-item__img-box">
-                            <img src="images/product/6.png" alt="product" class="product-item__images" width="230"
-                                height="170">
-                            <div class="product-item__link-box">
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/search-product.svg" alt="search icon">
-                                </a>
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/cart-product.svg" alt="cart icon">
-                                </a>
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/heart-product.svg" alt="heart icon">
-                                </a>
+                        <div class="product-item">
+                            <div class="product-item__img-box">
+                                <img src="images/product/6.png" alt="product" class="product-item__images" width="230"
+                                    height="170">
+                                <div class="product-item__link-box">
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/search-product.svg" alt="search icon">
+                                    </a>
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/cart-product.svg" alt="cart icon">
+                                    </a>
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/heart-product.svg" alt="heart icon">
+                                    </a>
+                                </div>
                             </div>
+                            <h4 class="product-item__title">
+                                Wooden chair
+                            </h4>
+                            <span class="product-item__price">$29.00</span>
                         </div>
-                        <h4 class="product-item__title">
-                            Wooden chair
-                        </h4>
-                        <span class="product-item__price">$29.00</span>
-                    </div>
 
 
-                    <div class="product-item">
-                        <div class="product-item__img-box">
-                            <img src="images/product/7.png" alt="product" class="product-item__images" width="230"
-                                height="170">
-                            <div class="product-item__link-box">
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/search-product.svg" alt="search icon">
-                                </a>
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/cart-product.svg" alt="cart icon">
-                                </a>
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/heart-product.svg" alt="heart icon">
-                                </a>
+                        <div class="product-item">
+                            <div class="product-item__img-box">
+                                <img src="images/product/7.png" alt="product" class="product-item__images" width="230"
+                                    height="170">
+                                <div class="product-item__link-box">
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/search-product.svg" alt="search icon">
+                                    </a>
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/cart-product.svg" alt="cart icon">
+                                    </a>
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/heart-product.svg" alt="heart icon">
+                                    </a>
+                                </div>
                             </div>
+
+                            <h4 class="product-item__title">
+                                White chair
+                            </h4>
+                            <span class="product-item__price">
+                                $29.00</span>
                         </div>
 
-                        <h4 class="product-item__title">
-                            White chair
-                        </h4>
-                        <span class="product-item__price">
-                            $29.00</span>
-                    </div>
 
-
-                    <div class="product-item">
-                        <div class="product-item__img-box">
-                            <img src="images/product/8.png" alt="product" class="product-item__images" width="235"
-                                height="155">
-                            <div class="product-item__link-box">
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/search-product.svg" alt="search icon">
-                                </a>
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/cart-product.svg" alt="cart icon">
-                                </a>
-                                <a class="product-item__link" href="#">
-                                    <img src="images/icons/heart-product.svg" alt="heart icon">
-                                </a>
+                        <div class="product-item">
+                            <div class="product-item__img-box">
+                                <img src="images/product/8.png" alt="product" class="product-item__images" width="235"
+                                    height="155">
+                                <div class="product-item__link-box">
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/search-product.svg" alt="search icon">
+                                    </a>
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/cart-product.svg" alt="cart icon">
+                                    </a>
+                                    <a class="product-item__link" href="#">
+                                        <img src="images/icons/heart-product.svg" alt="heart icon">
+                                    </a>
+                                </div>
                             </div>
+                            <h4 class="product-item__title">
+                                Retro table
+                            </h4>
+                            <span class="product-item__price">
+                                $29.00</span>
                         </div>
-                        <h4 class="product-item__title">
-                            Retro table
-                        </h4>
-                        <span class="product-item__price">
-                            $29.00</span>
+
+
+
+
+
                     </div>
-
-
-
-
-
                 </div>
+            </div>
 
         </section>
 
