--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="info__inner">
                 <div class="info__item">
                     <div class="info__item-img">
-                        <img src="../images/icons/support.svg" alt="supoort icon">
+                        <img src="images/icons/support.svg" alt="supoort icon">
                     </div>
                     <div class="info__item-content">
                         <h5 class="info__item-title">Support 24/7.</h5>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="info__item">
                     <div class="info__item-img">
-                        <img src="../images/icons/delivery.svg" alt="delivery icon">
+                        <img src="images/icons/delivery.svg" alt="delivery icon">
                     </div>
                     <div class="info__item-content">
                         <h5 class="info__item-title">Delivery.</h5>
@@ -165,7 +165,7 @@
                 </div>
                 <div class="info__item">
                     <div class="info__item-img info__item-payment">
-                        <img src="../images/icons/payment.svg" alt="payment icon">
+                        <img src="images/icons/payment.svg" alt="payment icon">
                     </div>
                     <div class="info__item-content">
                         <h5 class="info__item-title">100% Payment secure.</h5>
