--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="info__inner">
                 <div class="info__item">
                     <div class="info__item-img">
-                        <img src="images/icons/support.svg" alt="supoort icon">
+                        <img src="../images/icons/support.svg" alt="supoort icon">
                     </div>
                     <div class="info__item-content">
                         <h5 class="info__item-title">Support 24/7.</h5>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="info__item">
                     <div class="info__item-img">
-                        <img src="images/icons/delivery.svg" alt="delivery icon">
+                        <img src="../images/icons/delivery.svg" alt="delivery icon">
                     </div>
                     <div class="info__item-content">
                         <h5 class="info__item-title">Delivery.</h5>
@@ -165,7 +165,7 @@
                 </div>
                 <div class="info__item">
                     <div class="info__item-img info__item-payment">
-                        <img src="images/icons/payment.svg" alt="payment icon">
+                        <img src="../images/icons/payment.svg" alt="payment icon">
                     </div>
                     <div class="info__item-content">
                         <h5 class="info__item-title">100% Payment secure.</h5>
@@ -275,136 +275,134 @@
                             </h4>
                             <span class="product-item__price">$29.00</span>
                         </div>
-
-
-
-
-                        <div class="product-item">
-                            <div class="product-item__img-box">
-                                <img src="images/product/4.png" alt="product" class="product-item__images" width="230"
-                                    height="140">
-                                <div class="product-item__link-box">
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/search-product.svg" alt="search icon">
-                                    </a>
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/cart-product.svg" alt="cart icon">
-                                    </a>
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/heart-product.svg" alt="heart icon">
-                                    </a>
-                                </div>
-                            </div>
-                            <h4 class="product-item__title">
-                                Retro table
-                            </h4>
-                            <span class="product-item__price">$29.00</span>
-                        </div>
-
-
-                        <div class="product-item">
-                            <div class="product-item__img-box">
-                                <img src="images/product/5.png" alt="product" class="product-item__images" width="235"
-                                    height="160">
-                                <div class="product-item__link-box">
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/search-product.svg" alt="search icon">
-                                    </a>
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/cart-product.svg" alt="cart icon">
-                                    </a>
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/heart-product.svg" alt="heart icon">
-                                    </a>
-                                </div>
-                            </div>
-                            <h4 class="product-item__title">
-                                Wooden radio
-                            </h4>
-                            <div class="product-item__price">$29.00</div>
-                        </div>
-
-
-
-                        <div class="product-item">
-                            <div class="product-item__img-box">
-                                <img src="images/product/6.png" alt="product" class="product-item__images" width="230"
-                                    height="170">
-                                <div class="product-item__link-box">
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/search-product.svg" alt="search icon">
-                                    </a>
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/cart-product.svg" alt="cart icon">
-                                    </a>
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/heart-product.svg" alt="heart icon">
-                                    </a>
-                                </div>
-                            </div>
-                            <h4 class="product-item__title">
-                                Wooden chair
-                            </h4>
-                            <span class="product-item__price">$29.00</span>
-                        </div>
-
-
-                        <div class="product-item">
-                            <div class="product-item__img-box">
-                                <img src="images/product/7.png" alt="product" class="product-item__images" width="230"
-                                    height="170">
-                                <div class="product-item__link-box">
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/search-product.svg" alt="search icon">
-                                    </a>
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/cart-product.svg" alt="cart icon">
-                                    </a>
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/heart-product.svg" alt="heart icon">
-                                    </a>
-                                </div>
-                            </div>
-
-                            <h4 class="product-item__title">
-                                White chair
-                            </h4>
-                            <span class="product-item__price">
-                                $29.00</span>
-                        </div>
-
-
-                        <div class="product-item">
-                            <div class="product-item__img-box">
-                                <img src="images/product/8.png" alt="product" class="product-item__images" width="235"
-                                    height="155">
-                                <div class="product-item__link-box">
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/search-product.svg" alt="search icon">
-                                    </a>
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/cart-product.svg" alt="cart icon">
-                                    </a>
-                                    <a class="product-item__link" href="#">
-                                        <img src="images/icons/heart-product.svg" alt="heart icon">
-                                    </a>
-                                </div>
-                            </div>
-                            <h4 class="product-item__title">
-                                Retro table
-                            </h4>
-                            <span class="product-item__price">
-                                $29.00</span>
-                        </div>
-
-
-
-
-
                     </div>
+
+
+
+                    <div class="product-item">
+                        <div class="product-item__img-box">
+                            <img src="images/product/4.png" alt="product" class="product-item__images" width="230"
+                                height="140">
+                            <div class="product-item__link-box">
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/search-product.svg" alt="search icon">
+                                </a>
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/cart-product.svg" alt="cart icon">
+                                </a>
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/heart-product.svg" alt="heart icon">
+                                </a>
+                            </div>
+                        </div>
+                        <h4 class="product-item__title">
+                            Retro table
+                        </h4>
+                        <span class="product-item__price">$29.00</span>
+                    </div>
+
+
+                    <div class="product-item">
+                        <div class="product-item__img-box">
+                            <img src="images/product/5.png" alt="product" class="product-item__images" width="235"
+                                height="160">
+                            <div class="product-item__link-box">
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/search-product.svg" alt="search icon">
+                                </a>
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/cart-product.svg" alt="cart icon">
+                                </a>
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/heart-product.svg" alt="heart icon">
+                                </a>
+                            </div>
+                        </div>
+                        <h4 class="product-item__title">
+                            Wooden radio
+                        </h4>
+                        <div class="product-item__price">$29.00</div>
+                    </div>
+
+
+
+                    <div class="product-item">
+                        <div class="product-item__img-box">
+                            <img src="images/product/6.png" alt="product" class="product-item__images" width="230"
+                                height="170">
+                            <div class="product-item__link-box">
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/search-product.svg" alt="search icon">
+                                </a>
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/cart-product.svg" alt="cart icon">
+                                </a>
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/heart-product.svg" alt="heart icon">
+                                </a>
+                            </div>
+                        </div>
+                        <h4 class="product-item__title">
+                            Wooden chair
+                        </h4>
+                        <span class="product-item__price">$29.00</span>
+                    </div>
+
+
+                    <div class="product-item">
+                        <div class="product-item__img-box">
+                            <img src="images/product/7.png" alt="product" class="product-item__images" width="230"
+                                height="170">
+                            <div class="product-item__link-box">
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/search-product.svg" alt="search icon">
+                                </a>
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/cart-product.svg" alt="cart icon">
+                                </a>
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/heart-product.svg" alt="heart icon">
+                                </a>
+                            </div>
+                        </div>
+
+                        <h4 class="product-item__title">
+                            White chair
+                        </h4>
+                        <span class="product-item__price">
+                            $29.00</span>
+                    </div>
+
+
+                    <div class="product-item">
+                        <div class="product-item__img-box">
+                            <img src="images/product/8.png" alt="product" class="product-item__images" width="235"
+                                height="155">
+                            <div class="product-item__link-box">
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/search-product.svg" alt="search icon">
+                                </a>
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/cart-product.svg" alt="cart icon">
+                                </a>
+                                <a class="product-item__link" href="#">
+                                    <img src="images/icons/heart-product.svg" alt="heart icon">
+                                </a>
+                            </div>
+                        </div>
+                        <h4 class="product-item__title">
+                            Retro table
+                        </h4>
+                        <span class="product-item__price">
+                            $29.00</span>
+                    </div>
+
+
+
+
+
                 </div>
             </div>
-
         </section>
 
 
